# KubeAgent

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: documentation.yml
changelog/: index.html
docs/: index.md  system-architecture.md
docs/getting-started/: Intro.md  system-architecture.md  system_design_doc.md
getting-started/Intro/: index.html
getting-started/plugin_design_doc/: index.html
getting-started/system-architecture/: index.html
getting-started/system_design_doc/: index.html
kubeagent/core/: __init__.py
search/: search_index.json
