[tool.poetry]
name = "kubeagent"
version = "0.1.0"
description = "AI-Powered Kubernetes Service Management"
authors = ["Sandeep Mishra <mishrasandeep98@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.5.7"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"