[tool.poetry]
name = "kubeagent"
version = "0.1.0"
description = "AI-Powered Kubernetes Service Management"
authors = ["Sandeep Mishra <mishrasandeep98@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.5.7"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.7.5"
pre-commit = "^4.0.1"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
flake8-docstrings = "^1.7.0"
mypy = "^1.13.0"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
